<resources>
    <string name="app_name">ShotoMall</string>

    <string name="please_wait">拼命加载中，请稍后...</string>
    <string name="complete">完成</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="next_step">下一步</string>
    <string name="warning">提示</string>
    <string name="loading_data">正在加载中</string>
    <string name="no_more_data">没有了</string>
    <string name="payout_success">支付成功</string>
    <string name="payout_failed">支付失败</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <!--pagecount-->
    <!--<string name="page">张</string>-->
    <!--<string name="read_count">人阅读</string>-->

    <string name="home_comm_scure">通信保障</string>
    <string name="home_elec_stroe">电力储能</string>
    <string name="home_traffic_power">交通动力</string>
    <string name="home_recycle_back">循环回收</string>
    <string name="home_title_product_list">产品列表</string>
    <string name="home_title_search_hint">&#160;&#160;请输入关键字</string>
    <string name="home_title_search">搜索结果</string>

    <string name="home_tab_home">首页</string>
    <string name="home_tab_corp">分类</string>
    <string name="home_tab_news">新闻</string>
    <string name="home_tab_mall">购物车</string>
    <string name="home_tab_me">我的</string>

    <string name="profile_order_detail">订单详情</string>


    <string name="login_title">登录</string>
    <string name="login_find_password_back">忘记密码</string>
    <string name="login_fast_regist">快速注册</string>
    <string name="login_phone_num">手机号</string>
    <string name="login_username_is_null">手机号不可为空</string>
    <string name="login_phone_num_is_unavailable">手机号码格式错误</string>
    <string name="login_password_is_null">密码不可为空</string>

    <string name="regist_title">注册</string>
    <string name="regist_select_type">选择用户类型</string>
    <string name="regist_personal_user">注册个人用户</string>
    <string name="regist_company_user">注册企业用户</string>
    <string name="regist_phone_num">手机号</string>
    <string name="regist_confirm_code">输入短信验证码</string>
    <string name="regist_confirm_phone_num">验证手机号码</string>
    <string name="regist_email">电子邮箱</string>
    <string name="regist_corp_email">企业邮箱</string>
    <string name="regist_nick_name">昵称</string>
    <string name="regist_company_name">公司名称</string>
    <string name="regist_password">密码</string>
    <string name="regist_password_confirm">确认密码</string>
    <string name="regist_send_sms_code">发送验证码</string>
    <string name="regist_image_confirm_code">输入右侧验证码</string>
    <string name="regist_image_confirm_code_error">验证码错误</string>
    <string name="regist_pwd_is_different">两次密码不一致</string>
    <string name="regist_email_is_illegal">邮箱格式不正确</string>
    <string name="regist_get_img_verify_code_failed">图片验证码获取失败</string>
    <string name="regist_sms_count_down">秒后重新获取</string>
    <string name="regist_confirm_to_abandon">您确定要放弃注册吗？</string>
    <string name="regist_sms_code_has_sended">短信已发送</string>
    <string name="regist_email_has_sended">邮件已发送</string>
    <string name="regist_user_has_registed">用户已存在</string>
    <string name="regist_corp_license">营业执照照片</string>
    <string name="regist_sms_validate_code_error">短信验证码错误</string>
    <string name="regist_sms_send_failed">短信发送失败</string>

    <string name="imageloader_loading">正在加载...</string>
    <string name="imageloader_extrnal_storage_not_exist">暂无外部存储</string>
    <string name="imageloader_alert_user_allow_access_extrnal_storage">获取本地图片需授予权限</string>
    <string name="imageloader_image_not_found">图片文件不存在</string>

    <string name="regist_now">立即注册</string>

    <string name="regist_user_successed">个人用户注册成功</string>
    <string name="regist_user_failed">个人用户注册失败</string>

    <string name="regist_company_successed">企业用户注册成功</string>
    <string name="regist_company_failed">企业用户注册失败</string>
    <string name="regist_company_image_upload_success">图片上传成功</string>
    <string name="regist_company_image_upload_failed">图片上传失败</string>

    <string name="login_successed">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_forget_pwd_title">忘记密码</string>
    <string name="login_forget_pwd">输入新密码</string>
    <string name="login_sure_to_abondent_get_pwd_back">您确定要放弃找回密码吗？</string>
    <string name="login_forget_pwd_reset_successed">重置成功</string>
    <string name="login_forget_pwd_reset_failed">重置失败</string>
    <string name="login_logout_msg">确定要注销吗？</string>

    <string name="key_tracking_mode">key_tracking_mode</string>


</resources>
