<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#42cea7"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_num_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/phone_num_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regist_phone_num"
                android:inputType="phone"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sms_confirm_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/sms_confirm_code_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regist_confirm_code"
                    android:inputType="number"
                    android:lines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/send_sms_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:background="#42cea7"
                android:padding="5dp"
                android:text="@string/regist_send_sms_code"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <Button
            android:id="@+id/regist_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="30dp"
            android:background="#42cea7"
            android:text="@string/next_step"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>
