<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42cea7"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forget_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/forget_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_forget_pwd"
            android:inputType="textPassword"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regist_password_confirm"
            android:inputType="textPassword"
            android:lines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forget_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="30dp"
        android:background="#42cea7"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />

</LinearLayout>
