<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24bc90">


    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="25dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regist_phone_num"
                android:inputType="phone"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regist_password"
                    android:inputType="textPassword"
                    android:lines="1" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/password_switcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:button="@drawable/password_selector"
                android:gravity="center"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#42cea7"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:paddingTop="20dp"
            android:text="@string/login_find_password_back"
            android:textColor="#42cea7" />

        <!--<TextView-->
        <!--android:id="@+id/fast_regist"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="right"-->
        <!--android:paddingBottom="10dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:text="@string/login_fast_regist"-->
        <!--android:textColor="#42cea7" />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_layout"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="2dp">

        <Button
            android:id="@+id/fast_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42cea7"
            android:text="@string/login_fast_regist"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
